--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -352,9 +352,8 @@
   padding: 1rem 2rem;
   border-radius: var(--radius-md);
   box-shadow: var(--shadow-md);
-  z-index: 10;
+  z-index: 1500;
   text-align: center;
-
   display: flex;              /* make it flex */
   flex-direction: column;     /* stack vertically */
   align-items: center;        /* center button under text */
@@ -370,7 +369,7 @@
 
 .error-content p {
   margin: 0;
-  color: red;
+  color: rgb(255, 255, 255);
   font-weight: bold;
 }
 
